--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="link" alt="" href="http://t.me/Lidiya_Avstriyskaya" target="_ blank"><i class='bx bxl-telegram'></i></a>
           <a class="link" href="https://instagram.com/lidia_avs" target="_ blank"><i class='bx bxl-instagram'></i></a>
           <a class="link" href="https://vk.com/l.avstriyskaya" target="_ blank"><i class='bx bxl-vk'></i></a>
-          <a class="link" href="https://github.com/Avstiiskaya" target="_ blank"><i class='bx bxl-github'></i></a>
+          <a class="link" href="https://github.com/Avstriiskaya" target="_ blank"><i class='bx bxl-github'></i></a>
         </div>
         <div class="menu">
             <button  class="button button5"><p>НЕ НАЖИМАЙ</p> </button>
