--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <h1 class="title">QA-Engineer</h1>
         <h2 class="subtitle">Австрийская Лидия</h2>
         <p class="description">
-          Безнадёжно — это когда на крышку гроба падает земля. Остальное можно исправить.
-          «Перевозчик» <span></span>
+          Привет, я начинающий тестировщик. Есть огромное желание развиваться в сфере информационных технологий.  <span></span>
         </p>
 
         <div class="links">
