--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1 class="title">QA-Engineer</h1>
         <h2 class="subtitle">Австрийская Лидия</h2>
         <p class="description">
-          Привет, я начинающий тестировщик. Есть огромное желание развиваться в сфере информационных технологий.  <span></span>
+          Привет, я начинающий тестировщик. Есть огромное желание развиваться в сфере информационных технологий.😊  <span></span>
         </p>
 
         <div class="links">
